--- a/p8105_hw1_ar4040.md
+++ b/p8105_hw1_ar4040.md
@@ -3,3 +3,196 @@ Homework 1
 Adarsh Ramakrishnan
 
 This is my homework 1 solution
+
+Load tidyverse library
+
+``` r
+library(tidyverse)
+```
+
+    ## -- Attaching packages --------------------------------------------- tidyverse 1.3.0 --
+
+    ## v ggplot2 3.3.2     v purrr   0.3.4
+    ## v tibble  3.0.3     v dplyr   1.0.2
+    ## v tidyr   1.1.2     v stringr 1.4.0
+    ## v readr   1.3.1     v forcats 0.5.0
+
+    ## -- Conflicts ------------------------------------------------ tidyverse_conflicts() --
+    ## x dplyr::filter() masks stats::filter()
+    ## x dplyr::lag()    masks stats::lag()
+
+## Problem 1
+
+Creating the specified dataframe
+
+``` r
+hw1_p1_df = 
+  tibble(
+    sample_normal = rnorm(10),
+    sample_gt0 = sample_normal > 0,
+    character_vector = c("h","i","j","k","l","m","n","o","p","q"),
+    factor_vector = factor(c("low","mod","high","low","mod","high","low","mod","high","low"))
+)
+```
+
+Finding mean of each variable in hw1\_p1\_df
+
+``` r
+mean(pull(hw1_p1_df, sample_normal))
+```
+
+    ## [1] 0.01896457
+
+``` r
+mean(pull(hw1_p1_df, sample_gt0))
+```
+
+    ## [1] 0.5
+
+``` r
+mean(pull(hw1_p1_df, character_vector))
+```
+
+    ## Warning in mean.default(pull(hw1_p1_df, character_vector)): argument is not
+    ## numeric or logical: returning NA
+
+    ## [1] NA
+
+``` r
+mean(pull(hw1_p1_df, factor_vector))
+```
+
+    ## Warning in mean.default(pull(hw1_p1_df, factor_vector)): argument is not numeric
+    ## or logical: returning NA
+
+    ## [1] NA
+
+For the sample\_normal, you get an actual mean since they are all
+numeric. For the logical vector, all the true and false are converted
+into 0s and 1s, after which it takes the mean. Mean isn’t calculated for
+character or factor vectors.
+
+``` r
+as.numeric(pull(hw1_p1_df, sample_normal))
+```
+
+    ##  [1] -1.4325560  1.1151993 -1.2061393  2.0253258 -0.1984691  0.2800515
+    ##  [7]  0.6057774  0.8179555 -1.7108105 -0.1066888
+
+``` r
+as.numeric(pull(hw1_p1_df, sample_gt0))
+```
+
+    ##  [1] 0 1 0 1 0 1 1 1 0 0
+
+``` r
+as.numeric(pull(hw1_p1_df, character_vector))
+```
+
+    ## Warning: NAs introduced by coercion
+
+    ##  [1] NA NA NA NA NA NA NA NA NA NA
+
+``` r
+as.numeric(pull(hw1_p1_df, factor_vector))
+```
+
+    ##  [1] 2 3 1 2 3 1 2 3 1 2
+
+The numbers in sample\_normal remain as is. The logical vector is
+converted into 0s and 1s as mentioned above The character vector cannot
+be converted into numbers The factor vector is converted into some
+unintuitive numbers
+
+This explains what happens when you try to take the mean for the logical
+as you can see the 0 and 1 conversion. For character vector, there is no
+way to convert them into numbers and so no way to take the mean. For the
+factor vector, there appears to be a way to convert them into numbers.
+However, the mean function does not return a mean in the previous code
+chunk.
+
+``` r
+as.numeric(pull(hw1_p1_df, sample_gt0)) * pull(hw1_p1_df, sample_normal)
+```
+
+    ##  [1] 0.0000000 1.1151993 0.0000000 2.0253258 0.0000000 0.2800515 0.6057774
+    ##  [8] 0.8179555 0.0000000 0.0000000
+
+``` r
+as.factor(pull(hw1_p1_df, sample_gt0)) * pull(hw1_p1_df, sample_normal)
+```
+
+    ## Warning in Ops.factor(as.factor(pull(hw1_p1_df, sample_gt0)), pull(hw1_p1_df, :
+    ## '*' not meaningful for factors
+
+    ##  [1] NA NA NA NA NA NA NA NA NA NA
+
+``` r
+as.numeric(as.factor(pull(hw1_p1_df, sample_gt0))) * pull(hw1_p1_df, sample_normal)
+```
+
+    ##  [1] -1.4325560  2.2303985 -1.2061393  4.0506516 -0.1984691  0.5601030
+    ##  [7]  1.2115548  1.6359110 -1.7108105 -0.1066888
+
+## Problem 2
+
+Loading and running the penguins dataset
+
+``` r
+data("penguins", package = "palmerpenguins")
+
+penguins
+```
+
+    ## # A tibble: 344 x 8
+    ##    species island bill_length_mm bill_depth_mm flipper_length_~ body_mass_g
+    ##    <fct>   <fct>           <dbl>         <dbl>            <int>       <int>
+    ##  1 Adelie  Torge~           39.1          18.7              181        3750
+    ##  2 Adelie  Torge~           39.5          17.4              186        3800
+    ##  3 Adelie  Torge~           40.3          18                195        3250
+    ##  4 Adelie  Torge~           NA            NA                 NA          NA
+    ##  5 Adelie  Torge~           36.7          19.3              193        3450
+    ##  6 Adelie  Torge~           39.3          20.6              190        3650
+    ##  7 Adelie  Torge~           38.9          17.8              181        3625
+    ##  8 Adelie  Torge~           39.2          19.6              195        4675
+    ##  9 Adelie  Torge~           34.1          18.1              193        3475
+    ## 10 Adelie  Torge~           42            20.2              190        4250
+    ## # ... with 334 more rows, and 2 more variables: sex <fct>, year <int>
+
+There are 8 variables and 344 observations in the dataset. The variables
+include - 1)species (character variable) 2)island (character variable)
+3)bill\_length\_mm (numeric variable) 4)bill\_depth\_mm (numeric
+variable) 5)flipper\_length\_mm (numeric variable) 6)body\_mass\_g
+(numeric variable) 7)sex (character variable: values are male or female)
+8)year (numeric variable)
+
+``` r
+nrow(penguins)
+```
+
+    ## [1] 344
+
+``` r
+ncol(penguins)
+```
+
+    ## [1] 8
+
+The dataset contains 344 columns (observations or penguins) and 8 rows
+(variables about the penguins)
+
+``` r
+mean(pull(penguins,flipper_length_mm))
+```
+
+    ## [1] NA
+
+Making the scatterplot of flipper length
+
+``` r
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
+![](p8105_hw1_ar4040_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
